--- a/style.css
+++ b/style.css
@@ -5,11 +5,21 @@
 }
 #hero-h1{
   width: 100%;
-  height: 100vh;
+  height: 80vh;
   background-image: url(images/bg/bg-1.jpg);
   background-size: cover;
   background-position:center;
   position: relative;
+}
+
+
+@media(max-width:500px){
+    #hero-h1{
+        width: 100%;
+        height: 80vh;
+
+      }
+     
 }
 
 .container .header {
@@ -84,7 +94,7 @@ margin-left: 10px;
 border: 1px solid #A82C48;
 }
 
-/* .hero-footer{
+.hero-footer{
     position:absolute;
     background-color:#c9133e;
     width: 100%;
@@ -100,7 +110,7 @@ border: 1px solid #A82C48;
 }
 .hero-footer .col-sm-3 {
    font-size: 12px; */
-/* } */
+}
 
 .banner{
     margin-top: 100px;
@@ -210,9 +220,9 @@ padding: 5px 20px;
 border-radius:5px;
 }
 
-.explore-food-img .col-md-4 .img-fluid:hover{
+/* .explore-food-img .col-md-4 .img-fluid:hover{
 transform: scale(1.1);
-}
+} */
 .img1{
 
  text-align: start;
